syntax = "proto3";

option go_package = "./user/v1";

package user.v1;

service UserService {
    rpc ListUsers (UserRequest) returns (UserResponse) {}
    rpc GetUser (UserRequest) returns (UserResponse) {}
    rpc CreateUser (UserRequest) returns (UserResponse) {}
    rpc UpdateUsers (UserRequest) returns (UserResponse) {}
    rpc DeleteUsers (UserRequest) returns (UserResponse){}
}

message UserRequest {
    string ID        = 1;
    string FirstName = 2;
    string LastName  = 3;
}

message UserResponse {
    string ID        = 1;
    string FirstName = 2;
    string LastName  = 3;
}